k8s/example/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: example-ingress
  labels:
    app: example-ingress
  annotations:
    kubernetes.io/ingress.class: nginx 
    # cert-manager.io/cluster-issuer: letsencrypt-prod
    # nginx.ingress.kubernetes.io/add-base-url: "true"
    # nginx.ingress.kubernetes.io/proxy-body-size: "0"
spec:
  # tls:
  # - hosts:
  #   - ipico.com.vn
  #   secretName: cert-ipico.com.vn
  rules:
  - host: apple.adtsolutions.com.vn
    http:
      paths:
        - path: /
          pathType: Prefix
          backend:
            service:
                name: apple-service
                port:
                  number: 5678
  - host: banana.adtsolutions.com.vn
    http:
      paths:
        - path: /
          pathType: Prefix
          backend:
            service:
                name: banana-service
                port:
                  number: 5678
